disable scrollbar and fix popup border

--- a/src/index.css
+++ b/src/index.css
@@ -92,6 +92,12 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+html,
+body {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
