--- a/src/style/HeaderButtons.scss
+++ b/src/style/HeaderButtons.scss
@@ -46,7 +46,7 @@
     background: var(--color-white);
     overflow: hidden;
     z-index: 200001;
-    border: 3px solid var(--color-black);
+    border: 0 solid var(--color-black);
 }
 
 .popup .content {
