--- a/src/style/MainComponent.scss
+++ b/src/style/MainComponent.scss
@@ -10,6 +10,7 @@
     display: block;
     width: 100%;
     height: calc(100vh - 80px);
+    transition: all 0.2s ease-in-out;
 
     .graphic-container {
         background-color: var(--color-white);
